--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
 <html>
+  
 <head>
+  <link rel="stylesheet" type="text/css" href="inovi.css">
 </head>
+  
 <body>
-<h1>inovi.link</h1>
-<p>hub for whatever fun garbage i decide to work on at the moment</p>
+  
+  <h1>inovi.link</h1>
+  <p>hub for whatever fun garbage i decide to work on at the moment</p>
+  
 </body>
+  
 </html>
