--- a/tranquil.html
+++ b/tranquil.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<audio src="/music/freqlockfail.flac" autoplay>
+<audio src="freq lock fail_rough.flac" autoplay>
 <p>if you are reading this, your browser does not support the audio element :(</p>
 </audio>
 
