--- a/index.html
+++ b/index.html
@@ -7,8 +7,41 @@
   
 <body>
   
-  <h1>inovi.link</h1>
-  <p>hub for whatever fun garbage i decide to work on at the moment</p>
+  <center>
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="640" height="640">
+  <defs>
+    <path d="M454.56 327.28L327.28 454.56L200 327.28L327.28 200L454.56 327.28Z" id="a7MtN0OpZk"></path>
+    <path d="M454.56 200L327.28 327.28L200 200L327.28 72.72L454.56 200Z" id="b53HSghFhn"></path>
+    <path d="M454.56 454.56L327.28 581.84L200 454.56L327.28 327.28L454.56 454.56Z" id="a3sCMfQAnJ"></path>
+    <path d="M482.84 327.28L327.28 482.85L171.71 327.28L327.28 171.72L482.84 327.28Z" id="b1CiHAjp5A"></path>
+  </defs>
+  <g>
+    <g>
+      <g>
+        <use xlink:href="#a7MtN0OpZk" opacity="1" fill="#e9cd74" fill-opacity="1"></use><g><use xlink:href="#a7MtN0OpZk" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="1" stroke-opacity="1"></use>
+        </g>
+      </g>
+      <g>
+        <use xlink:href="#b53HSghFhn" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#b53HSghFhn" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#a3sCMfQAnJ" opacity="1" fill="#000000" fill-opacity="0"></use>
+      <g>
+        <use xlink:href="#a3sCMfQAnJ" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use>
+      </g>
+      </g>
+      <g>
+        <use xlink:href="#b1CiHAjp5A" opacity="1" fill="#000000" fill-opacity="0"></use>
+        <g>
+          <use xlink:href="#b1CiHAjp5A" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use>
+        </g>
+      </g>
+    </g>
+  </g>
+    </svg>
+  </center>
+  
+  <p>inovi.link -- clearnet House Inovi portal.</p>
+  <p>20210705 SITE-13 pending acquisition.</p>
   
 </body>
   
