--- a/index.html
+++ b/index.html
@@ -10,34 +10,7 @@
   <center>
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="640" height="640">
-  <defs>
-    <path d="M454.56 327.28L327.28 454.56L200 327.28L327.28 200L454.56 327.28Z" id="a7MtN0OpZk"></path>
-    <path d="M454.56 200L327.28 327.28L200 200L327.28 72.72L454.56 200Z" id="b53HSghFhn"></path>
-    <path d="M454.56 454.56L327.28 581.84L200 454.56L327.28 327.28L454.56 454.56Z" id="a3sCMfQAnJ"></path>
-    <path d="M482.84 327.28L327.28 482.85L171.71 327.28L327.28 171.72L482.84 327.28Z" id="b1CiHAjp5A"></path>
-  </defs>
-  <g>
-    <g>
-      <g>
-        <use xlink:href="#a7MtN0OpZk" opacity="1" fill="#e9cd74" fill-opacity="1"></use><g><use xlink:href="#a7MtN0OpZk" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="1" stroke-opacity="1"></use>
-        </g>
-      </g>
-      <g>
-        <use xlink:href="#b53HSghFhn" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#b53HSghFhn" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#a3sCMfQAnJ" opacity="1" fill="#000000" fill-opacity="0"></use>
-      <g>
-        <use xlink:href="#a3sCMfQAnJ" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use>
-      </g>
-      </g>
-      <g>
-        <use xlink:href="#b1CiHAjp5A" opacity="1" fill="#000000" fill-opacity="0"></use>
-        <g>
-          <use xlink:href="#b1CiHAjp5A" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use>
-        </g>
-      </g>
-    </g>
-  </g>
-    </svg>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 316 506" width="64" height="64"><defs><path d="M158 376.1L35.28 253.4L158 130.7L280.73 253.4L158 376.1Z" id="dMOwp8dWU"></path><path d="M158 376.1L35.28 253.4L158 130.7L280.73 253.4L158 376.1Z" id="dlpcyBotP"></path><path d="M158 253.4L35.28 130.7L158 8L280.73 130.7L158 253.4Z" id="c6yhGH7IDK"></path><path d="M158 253.4L35.28 130.7L158 8L280.73 130.7L158 253.4Z" id="a83r6usmt"></path><path d="M158 498.8L35.28 376.1L158 253.4L280.73 376.1L158 498.8Z" id="c40aCb1tNi"></path><path d="M158 498.8L35.28 376.1L158 253.4L280.73 376.1L158 498.8Z" id="lLcUTJAqo"></path><path d="M158 403.37L8 253.4L158 103.44L308 253.4L158 403.37Z" id="a14CQ3jPcO"></path><path d="M158 403.37L8 253.4L158 103.44L308 253.4L158 403.37Z" id="bD9QElIZZ"></path></defs><g><g><g><use xlink:href="#dMOwp8dWU" opacity="1" fill="#e9cd74" fill-opacity="1"></use><g><use xlink:href="#dMOwp8dWU" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#dlpcyBotP" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#dlpcyBotP" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="1" stroke-opacity="1"></use></g></g><g><use xlink:href="#c6yhGH7IDK" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#c6yhGH7IDK" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#a83r6usmt" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#a83r6usmt" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#c40aCb1tNi" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#c40aCb1tNi" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#lLcUTJAqo" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#lLcUTJAqo" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#a14CQ3jPcO" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#a14CQ3jPcO" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#bD9QElIZZ" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#bD9QElIZZ" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g></g></g></svg>
   </center>
   
   <p>inovi.link -- clearnet House Inovi portal.</p>
