--- a/save/20210823-003112/20200824-213112.html
+++ b/save/20210823-003112/20200824-213112.html
@@ -1,1 +1,53 @@
-
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <link rel="stylesheet" type="text/css" href="inovi.css">
+</head>
+  
+<body>
+  
+  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+  <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 316 506" width="64" height="64"><defs><path d="M158 376.1L35.28 253.4L158 130.7L280.73 253.4L158 376.1Z" id="dMOwp8dWU"></path><path d="M158 376.1L35.28 253.4L158 130.7L280.73 253.4L158 376.1Z" id="dlpcyBotP"></path><path d="M158 253.4L35.28 130.7L158 8L280.73 130.7L158 253.4Z" id="c6yhGH7IDK"></path><path d="M158 253.4L35.28 130.7L158 8L280.73 130.7L158 253.4Z" id="a83r6usmt"></path><path d="M158 498.8L35.28 376.1L158 253.4L280.73 376.1L158 498.8Z" id="c40aCb1tNi"></path><path d="M158 498.8L35.28 376.1L158 253.4L280.73 376.1L158 498.8Z" id="lLcUTJAqo"></path><path d="M158 403.37L8 253.4L158 103.44L308 253.4L158 403.37Z" id="a14CQ3jPcO"></path><path d="M158 403.37L8 253.4L158 103.44L308 253.4L158 403.37Z" id="bD9QElIZZ"></path></defs><g><g><g><use xlink:href="#dMOwp8dWU" opacity="1" fill="#e9cd74" fill-opacity="1"></use><g><use xlink:href="#dMOwp8dWU" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#dlpcyBotP" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#dlpcyBotP" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="1" stroke-opacity="1"></use></g></g><g><use xlink:href="#c6yhGH7IDK" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#c6yhGH7IDK" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#a83r6usmt" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#a83r6usmt" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#c40aCb1tNi" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#c40aCb1tNi" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#lLcUTJAqo" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#lLcUTJAqo" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g><g><use xlink:href="#a14CQ3jPcO" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#a14CQ3jPcO" opacity="1" fill-opacity="0" stroke="#000000" stroke-width="1" stroke-opacity="0"></use></g></g><g><use xlink:href="#bD9QElIZZ" opacity="1" fill="#000000" fill-opacity="0"></use><g><use xlink:href="#bD9QElIZZ" opacity="1" fill-opacity="0" stroke="#e9cd74" stroke-width="10" stroke-opacity="1"></use></g></g></g></g></svg>
+  
+  <p>inovi.link -- [20200824-213112] "NUL" access page.</p>
+  
+  <p>LOG</p>
+  <p></p>
+  <p>20210823 metadata anomaly at [20200824-213112]. modify date predates create date.</p>
+  <p>20210823 anomalous data recovered. [20200824-213112] "NUL" size 1080 KB. <a href="/save/20210823-003112/20200824-213112.html">contents</a>.</p>
+  <p></p>
+  <p></p>
+  <p>DATA</p>
+  <p></p>
+  <p><a href="./20200824-213112.mp3">[20200824-213112] "NUL"</a></p>
+  <p>transcript:</p>
+  <p>
+    <code>
+      [morse code: ignore recall assets site thirteen data follows stop call demod stop]
+      [female (?) voice] 79 70 7a 63 6b 72 76 78 73 66 74 76 62 6d 6b 6e 77 70 6e 63 73 6f 72 69 6f 65 69 74 68 7a 69 77 6a 71 73 71 6d 70 65 7a 71 65 6a 76 79 67 break. 6d 6b 61 7a 6a 61 6e 70 6d 67 73 75 6e 77 73 6f 76 66 63 68 78 70 64 6f 79
+      [sstv broadcast recording (currently untranslated)] 71 6b 76 63 7a 6d 6c 61 72 67 63 6f 68 63 61 78 79 6b break. 7a 71 77 72 71 73 6a 6c 78 6e 73 6e 74 67 67 66 6e 61 65 70 63 69 71 7a 65 74 67 69 6b 73 6f 77 6c 6e break. Message repeats.
+      [EOF]
+    </code>
+  </p>
+  <p></p>
+  <p></p>
+  <p>METADATA</p>
+  <p></p>
+  <p>title NUL</p>
+  <p>artist NUL</p>
+  <p>album NUL</p>
+  <p>length 00:01:32</p>
+  <p>created 20200824213112</p>
+  <p>modified 20200814164013</p>
+  <p>accessed 20200824213112</p>
+  <p></p>
+  <p></p>
+  <p>NOTES</p>
+  <p></p>
+  <p>access time predates create time; possible corruption. message contents unknown. morse code references asset recall at future site, invokes undefined subroutine 'demod'. unknown result.</p>
+  
+</body>
+  
+</html>
