--- a/save/20210823-003112/20200824-213112.html
+++ b/save/20210823-003112/20200824-213112.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-  <link rel="stylesheet" type="text/css" href="inovi.css">
+  <link rel="stylesheet" type="text/css" href="http://inovi.link/inovi.css">
 </head>
   
 <body>
@@ -15,13 +15,14 @@
   
   <p>LOG</p>
   <p></p>
+  <p>20210823 morse code decoded. transcript, notes amended.</p>
   <p>20210823 metadata anomaly at [20200824-213112]. modify date predates create date.</p>
-  <p>20210823 anomalous data recovered. [20200824-213112] "NUL" size 1080 KB. <a href="/save/20210823-003112/20200824-213112.html">contents</a>.</p>
+  <p>20210823 anomalous data recovered. [20200824-213112] "NUL" size 1080 KB.</p>
   <p></p>
   <p></p>
   <p>DATA</p>
   <p></p>
-  <p><a href="./20200824-213112.mp3">[20200824-213112] "NUL"</a></p>
+  <p><a href="20200824-213112.mp3">[20200824-213112] "NUL"</a></p>
   <p>transcript:</p>
   <p>
     <code>
