--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
   </div>
   
   <!--
