--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
   </div>
   
   <!--
