--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   
 <body>
   
-
+ <audio autoplay loop preload>
+  <source src="music/freqlockfail.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio> 
+  
   <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
