--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   Your browser does not support the audio element.
 </audio> 
   
+  <div class="sunset"></div>
   <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
