--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   
 <body>
   
- <audio autoplay loop preload>
-  <source src="music/freqlockfail.mp3" type="audio/mpeg">
+ <audio autoplay loop preload muted>
+  <source src="freqlockfail.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio> 
   
