--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <body>
   
- <audio autoplay loop preload muted>
+ <audio autoplay loop preload>
   <source src="freqlockfail.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio> 
